# rsrd

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml  test.py  toad_optimizer.ipynb
data/: ZEDM.stl  cal_bear.ply  mallet.pkl  mug.ply  mug_new.ply  mug_physgaussian.ply  nerfgun.pkl  painter_sculpture.ply  painter_sculpture_physgaussian.ply  yumi.yml  zed_to_world.tf
data/robot_init_obs/: bear.svo2  light.svo2  nerfgun.svo2  red_box.svo2  scissors.svo2  stapler.svo2  sunglasses.svo2  usb_plug.svo2  wirecutter.svo2
data/zed/: zed_to_world.tf
rsrd/extras/: cam_helpers.py  viser_rsrd.py  zed.py
rsrd/motion/: atap_loss.py  motion_optimizer.py  observation.py
rsrd/robot/: graspable_obj.py  kinematics.py  motion_plan_yumi.py  planner.py  rsrd_motion_planner.py  urdf_helpers.py  yumi_coll_mat.py
rsrd/util/: common.py  frame_detectors.py
scripts/: brent_jax_trajsmooth.py  brent_manually_evaluate_tracking.py  brent_trajsmooth.py  calibrate_zed.py  experiment.py  launch.sh  mug_to_mug.py  replay_traj.py  robot_with_mug.py  run_planner.py  run_tracker.py  yumi_ik.py  yumi_test.py  yumi_toad.py  yumi_toad_2.py  yumi_tracking.py
toad/: articulated_gaussians.py  cameras.py  hamer_helper.py  hand_registration.py  toad_object.py  toad_optimizer.py  utils.py  yumi_curobo.py  zed.py
toad/extras/: cam_helpers.py  viser_rsrd.py  zed.py
toad/optimization/: atap_loss.py  frame.py  observation.py  rigid_group_optimizer.py  utils.py
toad/transforms/: __init__.py  _se3.py
toad/util/: common.py  frame_detectors.py  (+1 more)
tools/: calc_spheres_for_tt.py
(+18 files in other folders)
